--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a href="v4">version 4</a> Images added in Popup, spacing in popup reduced<br><br>
 <a href="v3">version 3</a> Styles applied<br><br>
 <a href="v2">version 2</a><br><br>
 <a href="v1">version 1</a><br><br>
