styling for IE8 and less, infoWindow fixed.

--- a/index.htm
+++ b/index.htm
@@ -50,7 +50,7 @@
       </ul>
     </div>
 
-     <div style="position:absolute; left:10px; bottom:10px; z-Index:999;">
+     <div id="basemapContainer">
         <div dojoType="dijit.TitlePane" title="BASEMAP" closable="false"  open="false" id="basemapTitlePane">
           <div dojoType="dijit.layout.ContentPane" style="width:270px; height:260px; overflow:auto;">
           <div id="basemapGallery" ></div></div>
