Started work on adding custom legend

--- a/index.htm
+++ b/index.htm
@@ -57,6 +57,10 @@
           </div>
      </div>
 
+     <!-- <div title="Legend" dojoType="dijit.TitlePane" id="legendPanel" selected="true">
+       <div id="legend"></div>    
+     </div> -->
+
       </div>
 
     </div>
