--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<a href="v6">version 6</a> Legend added, transparency in basemap and Legend bg<br><br>
+<a href="v5">version 5</a> Newest version from Github with some IE8 CSS Fixes<br><br>
 <a href="v4">version 4</a> Images added in Popup, spacing in popup reduced<br><br>
 <a href="v3">version 3</a> Styles applied<br><br>
 <a href="v2">version 2</a><br><br>
